lazy & images blurry fix

--- a/src/index.css
+++ b/src/index.css
@@ -2,12 +2,19 @@
 @tailwind components;
 @tailwind utilities;
 
+img {
+    -webkit-backface-visibility: hidden;
+    -ms-transform: translateZ(0); /* IE 9 */
+    -webkit-transform: translateZ(0); /* Chrome, Safari, Opera */
+    transform: translateZ(0);
+}
+
 .poppins {
     font-family: "Poppins", sans-serif;
 }
 
 .merriweather {
-    font-family: 'Merriweather Sans', sans-serif;
+    font-family: "Merriweather Sans", sans-serif;
 }
 
 .root {
